# RAG

./: .env  README.md  hello.py  pyproject.toml  requirements.txt
backend/: main.py
frontend/: streamlit_app.py
rag/: __init__.py  config.py  data_ingestion.py  llm_chain.py  vector_store.py
scripts/: run_data_ingestion.py
